PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/LoopSkipOnlyWithinLoopCoCo2.par
LoopSkipOnlyWithinLoopCoCo2 {
seq main() : Void {
    while true {
        break
    }
}
}