PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/LoopSkipOnlyWithinLoopCoCo.par
LoopSkipOnlyWithinLoopCoCo {
seq main() : Void {
    break
}
}